@@ -1,1 +1,1 @@
-char cvsdate[]="2004-05-29 15:53";
+char cvsdate[]="2004-05-29 15:55";
